incorporated client, saveasNetflux args

--- a/GRN_Example.ipynb
+++ b/GRN_Example.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600353064720",
+   "name": "python_defaultSpec_1600444381203",
    "display_name": "Python 3.8.1 64-bit ('pyscenic': conda)"
   }
  },
@@ -30,10 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from distributed import Client\n",
     "from src.GRNinference import inferGRN, crossvalidateGRN"
    ]
   },
@@ -41,22 +42,32 @@
    "source": [
     "Specify data and library arguments:\n",
     "- `path_to_data`: address of CSV file containing gene expression data (formatted as genes x samples)\n",
-    "- `lib_dir`: address of directory containing sub-directories for all TF-target databases (included in repository as `data`)\n",
     "- `lib_name`: string specifying the desired library to use for inference and refinement\n",
-    "  - Here, the [CHEA](https://pubmed.ncbi.nlm.nih.gov/20709693/) database of transcription factor targets is used"
+    "  - Here, the [CHEA](https://pubmed.ncbi.nlm.nih.gov/20709693/) database of transcription factor targets is used\n",
+    "- `client`: object created via Dask distributed for scheduling inference algorithm across workers "
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "path_to_data = \"data\\\\expression\\\\GSE133529_ProcessedDataFile.csv.gz\"\n",
-    "lib_dir = \"data\\\\\"\n",
+    "# lib_dir = \"data\\\\\"\n",
     "lib_name = \"CHEA\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = Client()\n",
+    "client"
    ]
   },
   {
@@ -81,7 +92,7 @@
     }
    ],
    "source": [
-    "grn = inferGRN(path_to_data, lib_dir, lib_name)"
+    "grn = inferGRN(path_to_data, lib_name, client, saveasNetflux=True)"
    ]
   },
   {
@@ -128,9 +139,9 @@
    ],
    "source": [
     "k = 8\n",
-    "path_to_save = \"data\\\\networks\\\\\"\n",
+    "# path_to_save = \"data\\\\networks\\\\\"\n",
     "\n",
-    "grn_all = crossvalidateGRN(path_to_data, lib_dir, lib_name, k, savedir=path_to_save)"
+    "grn_all = crossvalidateGRN(path_to_data, lib_name, k, client, saveasNetflux=True)"
    ]
   },
   {
